[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "Flask-MAB"
version = "3.0.0"
authors = [
  {name = "Mark Grey", email = "mark.asperia@gmail.com"}
]
description = "Multi-armed bandits for flask"
readme = "README.rst"
requires-python = ">=3.8" 
dependencies = [
  "Flask>=2.2.5",
  "flask-debugtoolbar==0.14.1",
]
classifiers = [
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.optional-dependencies]
dev = [
  "black==23.3.0",
  "pytest==8.1.1",
  "mock==5.1.0",
  "sphinx-pyproject==0.1.0",
  "sphinx==7.0.1",
  "Pallets-Sphinx-Themes==2.1.1",
  "tox==4.15.0"
]

[tool.sphinx-pyproject]
github_username = "DeaconDesperado"
github_repository = "flask_mab"
author = "Mark Grey"
project = "flask_mab"
package_root = "flask_mab"
language = "en"
extensions = [
  "sphinx.ext.autodoc",
  "sphinx.ext.viewcode",
  "pallets_sphinx_themes"
]
templates_path = [ "_templates",]
source_suffix = ".rst"
html_theme = 'flask'
