[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "Flask-MAB"
version = "3.0.3"
authors = [
  {name = "Mark Grey", email = "mark.asperia@gmail.com"}
]
description = "Multi-armed bandits for flask"
readme = "README.rst"
requires-python = ">=3.9" 
dependencies = [
  "Flask>=2.2.5",
  "flask-debugtoolbar==0.16.0",
]
classifiers = [
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.optional-dependencies]
dev = [
  "black==25.1.0",
  "pytest==8.4.1",
  "mock==5.2.0",
  "tox==4.29.0"
]
docs = [
  "sphinx-pyproject==0.3.0",
  "sphinx==8.2.3",
  "Pallets-Sphinx-Themes==2.3.0",
]

[tool.sphinx-pyproject]
github_username = "DeaconDesperado"
github_repository = "flask_mab"
author = "Mark Grey"
project = "flask_mab"
package_root = "flask_mab"
language = "en"
extensions = [
  "sphinx.ext.autodoc",
  "sphinx.ext.viewcode",
  "pallets_sphinx_themes"
]
templates_path = [ "_templates",]
source_suffix = ".rst"
html_theme = 'flask'
